[project]
name = "satan-yeet"
version = "0.0.1"
description = "A terminal-first git client."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual[syntax]>=8.2.1",
    "click>=8.2.1",
    "rich>=14.3.3",
    "xdg-base-dirs>=6.0.2",
    "textual-serve>=1.1.2",
    "textual-speedups==0.2.1",
    "pathspec>=0.12.1",
    "pyperclip>=1.11.0",
    "setproctitle>=1.3.7",
]

[tool.uv.workspace]
members = [
    "yeet",
]

[tool.uv.sources]
#textual-serve = { path = "../textual-serve", editable = true }
#textual = { path = "../textual", editable = true }
#textual-dev = { path = "../textual-dev", editable = true }
#rich = { path = "../rich", editable = true }

[project.scripts]
yeet = "yeet.cli:main"

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yeet"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyinstrument>=5.1.1",
    "textual-dev>=1.8.0",
]
